# Humanoid-robotics-book-with-chatbot

./: .gitignore
backend/: .env.example  .gitignore  README.md  check_qdrant.py  debug_qdrant.py  debug_storage.py  final_verification.py  get_all_urls.py  integration_test.py  integration_test_fixed.py  main.py  main_api.py  parse_sitemap.py  pyproject.toml  retrieval_cli.py  test_connection.py  test_real_embedding.py  test_retrieval.py  test_uuid_fix.py  verify_data.py  verify_records.py
backend/src/: README.md
backend/src/api/: crawl_endpoint.py  embed_endpoint.py  health_endpoint.py  models.py  rag_agent_endpoint.py  rag_agent_wrapper.py  retrieval_endpoint.py  validation_endpoint.py
backend/src/chunking/: text_chunker.py
backend/src/config/: settings.py
backend/src/crawler/: text_extractor.py  website_crawler.py
backend/src/embedding/: generator.py  models.py  query_generator.py
backend/src/models/: chunk_model.py  crawl_result_model.py  log_entry_model.py  metadata_model.py  pipeline_config_model.py  query_model.py  retrieval_result_model.py  validation_report_model.py
backend/src/services/: coherence_validator.py  content_validator.py  crawling_service.py  embedding_service.py  logging_service.py  metadata_validator.py  pipeline_service.py  retrieval_service.py  (+3 more)
backend/tests/: conftest.py  test_api.py  test_chunk_effectiveness.py  test_chunking.py  test_crawler.py  test_e2e_store_retrieve.py  test_embedding.py  test_end_to_end.py  test_incremental.py  test_performance.py  test_retrieval_validation.py  test_storage.py  test_validation.py
(+153 files in other folders)
